--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-aut">
-          <li><a class="navbar-brand" href="#">EDUPITR</a></li>
-        </ul>
-        </div>
+<app-header>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-aut">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Success stories <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">FAQs</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Resources</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link " href="#">
-              Contact us
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-      </div>
-  </div>
-
+</app-header>
+<app-footer>
+  
+</app-footer>
 <router-outlet></router-outlet>
