--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,42 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top">
+  <div class="container">
+    <img src="../../assets/images/edupitr_logo.png" alt="Edupitr logo">
+    <a class="navbar-brand" href="#">Edupitr</a>
+  </div>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Success Stories
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Services
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="#">About us
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="#">FAQs</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Resources</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Contact us</a>
+      </li>
+    </ul>
+  </div>
+</nav>
