--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,19 @@
-<p>
-  footer works!
-</p>
+<nav class="navbar navbar-inverse bg-primary fixed-bottom">
+  <div class="container">
+    <a class="navbar-brand" href="#">E-mail us: review.edupitr@gmail.com
+      <span class="sr-only">(current)</span>
+    </a>
+  </div>
+  <ul class="nav mr-auto mt-2 mt-lg-0 navbar-toggler-right">
+    <li class="nav-item active">
+      <a class="nav-link" href="https://www.facebook.com/EdupitrLab" target="_blank">
+        <img src="../../assets/images/facebook.png">
+      </a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="https://www.linkedin.com/company/edupitr-lab/" target="_blank">
+        <img src="../../assets/images/linkedin.png">
+      </a>
+    </li>
+  </ul>
+</nav>
