--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,7 @@
 .carousel-custom{
-    width: 668px;
-    height: 342px;
+    width:100%;
+    max-height: 200px !important;
+}
+.carousel-item{
+    width:80%;
 }
