--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,17 @@
 <div class="container-fluid">
-  <div class="row justify-content-md-center">
-    <div id="carouselExampleControls" class="carousel slide carousel-custom" data-ride="carousel">
+  <div class="row">
+    <div id="carouselExampleControls" class="carousel slide carousel-customjustify-content-md-center" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../assets/images/college.webp" alt="First slide">
+          <img src="../../assets/images/mit.webp" alt="First slide">
         </div>
+
         <div class="carousel-item">
+          <img width="595" height="343" src="../../assets/images/college.webp" alt="Second slide">
           <iframe width="668" height="342" src="https://www.youtube.com/embed/7SS92KCwWWA" frameborder="0" allow="autoplay; encrypted-media"
             allowfullscreen>
           </iframe>
@@ -26,6 +28,26 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div>
+        ALUMNI OF THESE UNIVERSITIES CAN WORK ON YOUR APPLICATION
+    </div>
+    <div class="d-inline-block ">
+      <h3><img src="../../assets/images/stanford.png"></h3>
+      
+    </div>
+    <div class="d-inline-block ">
+        <h3><img src="../../assets/images/georgia.png"></h3>
+        
+      </div>
+      <div class="d-inline-block ">
+          <h3><img src="../../assets/images/michigan.png"></h3>
+          
+        </div>
+    <div class="d-inline-block ">
+      <h3><img src="../../assets/images/purdue.png"></h3>
     </div>
   </div>
   <div class="row justify-content-md-center">
