About page done, success stories added as json, resoources added as json

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,3 +1,67 @@
-<p>
-  aboutus works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm">
+      <div>
+        <img src="../../assets/images/study.webp">
+      </div>
+      <div>
+        Not long back as we recollect our journey to study abroad, we began by seeking the most celebrated counselor in the city
+        to help us get into our dream university. The overall experience was not the best one.
+      </div>
+    </div>
+    <div class="col-sm">
+      <div>
+        <img src="../../assets/images/thoughts.png">
+      </div>
+      <div>
+        <ul>
+          <li>
+            First of all, the consultation fees seemed exorbitant.
+          </li>
+          <li>
+            Secondly, the 'consultant' was not from the relevant technical background. For instance, my consultant would not understand
+            how to present my VLSI design internship at IIT Bombay to get into Data Science or Machine Learning specialization
+            at Carnegie Mellon University for research track/job?
+          </li>
+          <li>
+            There was ‘one-advice-to-all’ strategy by consultants for most of the friends. Naturally, I wonder how can I stand out from
+            of the crowd?
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div>
+        <img src="../../assets/images/network.png">
+      </div>
+      <div>
+        What helped us most was the advice from previous alumni from our dream universities whom we aspired to follow. It is impossible
+        for a student to have connections in most universities which help them stand out in the pool of applicants. So here
+        we are... Right from understanding the actual situation for research/job, possible funding opportunities and much
+        more. Inception !!!
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <h3>NEXT STEPS</h3>
+      <div>
+          Having successful first-hand experience of the entire process from admission to top university to finding funding to job search, we decided to address this issue and help future aspirants.
+
+ 
+
+          At Edupitr, recent alumni, who studied in the US and are working in the top companies in the US, share their insights to tailor your documents to give you an edge over rest of the competition pool, assist you on what specifics to write to secure assistantships in that specific university and career advice.
+          
+           
+          
+          This is possible due to the network of current students and alumni across leading universities.
+          
+          Straight from the horse's mouth !!!
+      </div>
+    </div>
+    <div class="col-sm">
+      <h3>How Edupitr works ?</h3>
+      <img src="../../assets/images/howEdupitrWorks.webp">
+    </div>
+  </div>
+</div>
