--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Success Stories
+        <a class="nav-link" href="#" routerLink="/stories">Success Stories
           <span class="sr-only">(current)</span>
         </a>
       </li>
