FAQs rendered, need to fix UI where header is static and others float down

--- a/src/app/faqs/faqs.component.html
+++ b/src/app/faqs/faqs.component.html
@@ -1,3 +1,10 @@
-<p>
-  faqs works!
-</p>
+<div class="container-fluid">
+  <div class="row" *ngFor="let qa of faqs; let i = index">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{qa.question}}</h5>
+        <p class="card-text">{{qa.answer}}</p>
+      </div>
+    </div>
+  </div>
+</div>
