--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,25 +17,25 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="#">Services
+        <a class="nav-link" href="#" routerLink="/services">Services
           <span class="sr-only">(current)</span>
         </a>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="#">About us
+        <a class="nav-link" href="#" routerLink="/about">About us
           <span class="sr-only">(current)</span>
         </a>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="#">FAQs</a>
+        <a class="nav-link" href="#" routerLink="/faqs">FAQs</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Resources</a>
+        <a class="nav-link" href="#" routerLink="/resources">Resources</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Contact us</a>
+        <a class="nav-link" href="#" routerLink="/contact">Contact us</a>
       </li>
     </ul>
   </div>
