--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,3 +1,7 @@
-<p>
-  contactus works!
-</p>
+<div class="container-fluid mx-auto">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+  </div>
+
+</div>
