--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,3 +1,13 @@
-<p>
-  resources works!
-</p>
+<div class="container-body">
+  <div class="container-fluid mx-auto">
+    <div class="row" *ngFor="let resource of resources; let i = index">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{resource.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{resource.author}}</h6>
+          <p class="card-text">{{resource.text}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
