--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,3 +1,134 @@
-<p>
-  services works!
-</p>
+<div class="container-body">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-11">
+        <h4>
+          Edupitr assists US aspirants for document review process and university recommendations.
+        </h4>
+        <table>
+          <tr>
+            <td>
+                <span>
+                    <img src="../../assets/images/custom.png">
+                  </span>
+                  <span>
+                    We understand that every student has unique requirements.
+                  </span>  
+            </td>
+            <td>
+                <span>
+                    <img src="../../assets/images/modular.png">
+                  </span>
+                  <span>
+                    Hence, we offer ‘modular’ services. 
+                    <br>
+                    You pay only for the document you want to get reviewed.
+                  </span>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-11">
+          <table class="table services-table" cellspacing="5">
+            <caption class="caption-top">
+              <h2>
+                SERVICES
+              </h2>
+            </caption>
+            <colgroup>
+              <col class="grey" />
+              <col class="blue" />
+              <col class="dark-grey"/>
+              <col class="dark-grey"/>
+              <col class="dark-grey"/>
+            </colgroup>
+            
+            <thead>
+              <tr>
+                <th scope="col">
+                  <img src="../../assets/images/services.png">
+                  <br>
+                  Services
+                </th>
+                <th scope="col">
+                    <img src="../../assets/images/bulb.PNG">
+                    <br>
+                  Free Evaluation
+                </th>
+                <th scope="col">
+                    <img src="../../assets/images/pencil.PNG">
+                    <br>
+                  Marathon
+                </th>
+                <th scope="col">
+                    <img src="../../assets/images/chat.PNG">
+                    <br>
+                  Sprint
+                </th>
+                <th scope="col">
+                    <img src="../../assets/images/fast_forward.PNG">
+                    <br>
+                  Expedite
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                    Revisions
+                </td>
+                <td>
+                    1 SOP Evaluation
+                </td>
+                <td>
+                    3 revisions
+                </td>
+                <td>
+                    3 revisions
+                </td>
+                <td>
+                    1 revision
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    Profile evaluation + University Shortlisiting
+                </td>
+                <td>
+                    Not included
+                </td>
+                <td>
+                    Included
+                </td>
+                <td>
+                    Included
+                </td>
+                <td>
+                    Included
+                </td>
+              </tr>
+              <tr>
+                  <td>
+                      
+                  </td>
+                  <td>
+                      <button class="btn btn-success">Subscribe!</button>
+                  </td>
+                  <td>
+                      <button >Subscribe!</button>
+                  </td>
+                  <td>
+                      <button >Subscribe!</button>
+                  </td>
+                  <td>
+                      <button >Subscribe!</button>
+                  </td>
+                </tr>
+            </tbody>
+          </table>
+        </div>
+    </div>
+  </div>
+</div>
