--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,109 +1,123 @@
-<div class="container-fluid">
-  <div class="row">
-    <div id="carouselExampleControls" class="carousel slide carousel-customjustify-content-md-center" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../assets/images/mit.webp" alt="First slide">
-        </div>
-
-        <div class="carousel-item">
-          <img width="595" height="343" src="../../assets/images/college.webp" alt="Second slide">
-          <iframe width="668" height="342" src="https://www.youtube.com/embed/7SS92KCwWWA" frameborder="0" allow="autoplay; encrypted-media"
-            allowfullscreen>
-          </iframe>
-        </div>
-        <!-- <div class="carousel-item">
-        <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-      </div> -->
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+<div class="container-body">
   <div class="container-fluid">
-    <div>
-      ALUMNI OF THESE UNIVERSITIES CAN WORK ON YOUR APPLICATION
-    </div>
-    <div class="d-inline-block ">
-      <h3>
-        <img src="../../assets/images/stanford.png">
-      </h3>
-
-    </div>
-    <div class="d-inline-block ">
-      <h3>
-        <img src="../../assets/images/georgia.png">
-      </h3>
-
-    </div>
-    <div class="d-inline-block ">
-      <h3>
-        <img src="../../assets/images/michigan.png">
-      </h3>
-
-    </div>
-    <div class="d-inline-block ">
-      <h3>
-        <img src="../../assets/images/purdue.png">
-      </h3>
-    </div>
-  </div>
-  <div class="row justify-content-md-center">
-    <div class="col-4">
-      <img src="../../assets/images/journey.webp">
-    </div>
-    <div class="col-8">
-      <div id="carouselSuccessStories" class="carousel slide carousel-customjustify-content-md-center" data-ride="carousel">
+    <div class="row">
+      <div id="carouselExampleControls" class="carousel slide carousel-customjustify-content-md-center" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li *ngFor="let story of successStories; let i = index" data-target="#carouselSuccessStories" [attr.data-slide-to]="i" ngClass="i == 0 ? 'active' : ''">
-          </li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         </ol>
-        <div class="carousel-inner" role="listbox">
-          <div *ngFor="let story of successStories; let i = index" [ngClass]="i == 0 ? 'carousel-item active' : 'carousel-item'">
-
-            <img src={{successStories[i].imageURL}} alt="Event Image">
-            <div>
-                <h4>
-                    {{successStories[i].name}}
-                </h4>
-            </div>
-            
-            <div>
-              <ul>
-                <li *ngFor="let admit of successStories[i].admits; let j = index">
-                  {{successStories[i].admits[j]}}
-                </li>
-              </ul>
-            </div>
-            <div>
-                {{successStories[i].feedback}}
+        <div class="carousel-inner">
+          
+          <div class="carousel-item">
+            <img class="opaque" src="../../assets/images/mit.webp" alt="First slide">
+            <div class="centered">
+              <h1>Planning education abroad ?</h1>
+              <h3>EDUPITR HELPS YOUR UNIVERSITY APPLICATION STAND OUT AMONG THOUSANDS OF OTHERS</h3>
             </div>
           </div>
-        </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <div class="carousel-item active" style="background-color: black;">
+            <div >
+              <span>
+                <img src="../../assets/images/college.webp" alt="Second slide">
+              </span>
+              <span>
+                <iframe width="668" src="https://www.youtube.com/embed/7SS92KCwWWA"  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                </iframe>
+              </span>
+            </div>
+          </div>
+          <!-- <div class="carousel-item">
+        <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+      </div> -->
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
     </div>
-    <!-- <div class="col">
+    <div class="container-fluid ">
+      <div class="align-center">
+        <div>
+          ALUMNI OF THESE UNIVERSITIES CAN WORK ON YOUR APPLICATION
+        </div>
+        <div class="d-inline-block ">
+          <h3>
+            <img src="../../assets/images/stanford.png">
+          </h3>
+
+        </div>
+        <div class="d-inline-block ">
+          <h3>
+            <img src="../../assets/images/georgia.png">
+          </h3>
+
+        </div>
+        <div class="d-inline-block ">
+          <h3>
+            <img src="../../assets/images/michigan.png">
+          </h3>
+
+        </div>
+        <div class="d-inline-block ">
+          <h3>
+            <img src="../../assets/images/purdue.png">
+          </h3>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <div class="col-4">
+        <img src="../../assets/images/journey.webp">
+      </div>
+      <div class="col-8">
+        <div id="carouselSuccessStories" class="carousel slide carousel-custom justify-content-md-center" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li *ngFor="let story of successStories; let i = index" data-target="#carouselSuccessStories" [attr.data-slide-to]="i" ngClass="i == 0 ? 'active' : ''">
+            </li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div *ngFor="let story of successStories; let i = index" [ngClass]="i == 0 ? 'carousel-item active' : 'carousel-item'">
+
+              <img src={{successStories[i].imageURL}} alt="Event Image">
+              <div>
+                <h4>
+                  {{successStories[i].name}}
+                </h4>
+              </div>
+
+              <div>
+                <ul>
+                  <li *ngFor="let admit of successStories[i].admits; let j = index">
+                    {{successStories[i].admits[j]}}
+                  </li>
+                </ul>
+              </div>
+              <div>
+                {{successStories[i].feedback}}
+              </div>
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <!-- <div class="col">
       1 of 3
     </div> -->
+    </div>
   </div>
 </div>
