Services done, though need to add modal for offers

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -117,18 +117,136 @@
                       <button class="btn btn-success">Subscribe!</button>
                   </td>
                   <td>
-                      <button >Subscribe!</button>
+                      <button class="btn btn-success">Subscribe!</button>
                   </td>
                   <td>
-                      <button >Subscribe!</button>
+                      <button class="btn btn-success">Subscribe!</button>
                   </td>
                   <td>
-                      <button >Subscribe!</button>
+                      <button class="btn btn-success">Subscribe!</button>
                   </td>
                 </tr>
             </tbody>
           </table>
         </div>
+    </div>
+    <div class="row justify-content-center">
+      <table cellspacing="3" class="table">
+        <tr>
+          <td>
+            <div>
+              <h3>
+                Which service should I choose?
+              </h3>
+            </div>
+            <div>
+              <img src="../../assets/images/deadline.webp">
+            </div>
+            <div>
+              <table class="table ">
+                <tr>
+                  <td>
+                    <b>Need more information?</b>
+                  </td>
+                  <td>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                          <a href="#" routerlink="/faqs"> FAQs</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="#" routerlink="/contact"> Contact us</a>
+                        </li>
+                        <li class="list-group-item">
+                          <!--
+                            TODO: Add modal on click of offers!!!
+                          -->
+                            <a href="#"> Offers</a>
+                        </li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </td>
+          <td>
+            <div>
+              <h3>
+                  How do I start the review process ?
+              </h3>
+            </div>
+            <div>
+              <ol class="list-group list-group-flush">
+                <li>
+                    <div class="card" >
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            Send documents and brief profile description
+                          </h5>
+                          <img src="../../assets/images/email.png" class="float-right">
+                          <p class="card-text">
+                              E-mail ID: review.edupitr@gmail.com
+                              <br>
+                              Mail Title: ‘Name of student’,’Document’,’Edupitr Service Chosen’.
+                              <br>
+                              Content: GRE, TOEFL scorecards, resume and profile description. 
+                              <br>
+                              Include application deadline to help us prioritize tasks.
+                              <br>
+                              Please send your documents in Word format.
+                          </p>
+                        </div>
+                      </div>
+                </li>
+                <li>
+                    <div class="card" >
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            Make payment
+                          </h5>
+                          <img src="../../assets/images/payment.png" class="float-right">
+                          <p class="card-text">
+                              Depending on the customization and number of iterations required, we will let you know the cost of service via e-mail.
+                              <br>
+                              Use 'Subscribe' link above to make payment before we can start working on tailoring your documents.
+                          </p>
+                        </div>
+                      </div>
+                </li>
+                <li>
+                    <div class="card" >
+                        <div class="card-body">
+                          <h5 class="card-title">
+                              You are all set!
+                          </h5>
+                          <img src="../../assets/images/done.png" class="float-right">
+                          <p class="card-text">
+                              Sit back and relax as alumni will work on your documents.
+                          </p>
+                        </div>
+                      </div>
+                </li>
+              </ol>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <b>Note:</b>
+      <ul>
+        <li>
+            One 1 document means 1 SOP OR 1 LOR OR 1 resume. Multiple SOPs OR LORs do not mean 1 document.
+        </li>
+        <li>
+            Except for Edupitr Expedite, please allow us 2-3 days for a response on document review.
+        </li>
+        <li>
+            Document review starts after the payment is made.
+        </li>
+        <li>
+            Depending on the service you choose and your admission timeline, we can work together to get things done on time.
+        </li>
+      </ul>
     </div>
   </div>
 </div>
