--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,20 +9,22 @@
         <div class="carousel-inner">
           
           <div class="carousel-item">
-            <img class="opaque" src="../../assets/images/mit.webp" alt="First slide">
-            <div class="centered">
-              <h1>Planning education abroad ?</h1>
-              <h3>EDUPITR HELPS YOUR UNIVERSITY APPLICATION STAND OUT AMONG THOUSANDS OF OTHERS</h3>
+            <div>
+                <img class="opaque" src="../../assets/images/mit.webp" width="100%" alt="First slide" height="347">
+                <div class="centered">
+                  <h1>Planning education abroad ?</h1>
+                  <h3>EDUPITR HELPS YOUR UNIVERSITY APPLICATION STAND OUT AMONG THOUSANDS OF OTHERS</h3>
+                </div>
             </div>
           </div>
 
           <div class="carousel-item active" style="background-color: black;">
             <div >
               <span>
-                <img src="../../assets/images/college.webp" alt="Second slide">
+                <img src="../../assets/images/college.webp" height="100%" alt="Second slide">
               </span>
               <span>
-                <iframe width="668" src="https://www.youtube.com/embed/7SS92KCwWWA"  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                <iframe height="100%" height="347" width="668" src="https://www.youtube.com/embed/7SS92KCwWWA"  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
                 </iframe>
               </span>
             </div>
@@ -41,8 +43,11 @@
         </a>
       </div>
     </div>
-    <div class="container-fluid ">
-      <div class="align-center">
+    <div class="row">
+      <div class="col">
+
+      </div>
+      <div class="col-6">
         <div>
           ALUMNI OF THESE UNIVERSITIES CAN WORK ON YOUR APPLICATION
         </div>
@@ -70,51 +75,57 @@
           </h3>
         </div>
       </div>
-    </div>
-    <div class="row justify-content-md-center">
-      <div class="col-4">
-        <img src="../../assets/images/journey.webp">
+      <div class="col">
+
       </div>
-      <div class="col-8">
-        <div id="carouselSuccessStories" class="carousel slide carousel-custom justify-content-md-center" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li *ngFor="let story of successStories; let i = index" data-target="#carouselSuccessStories" [attr.data-slide-to]="i" ngClass="i == 0 ? 'active' : ''">
-            </li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div *ngFor="let story of successStories; let i = index" [ngClass]="i == 0 ? 'carousel-item active' : 'carousel-item'">
-
-              <img src={{successStories[i].imageURL}} alt="Event Image">
-              <div>
-                <h4>
-                  {{successStories[i].name}}
-                </h4>
-              </div>
-
-              <div>
-                <ul>
-                  <li *ngFor="let admit of successStories[i].admits; let j = index">
-                    {{successStories[i].admits[j]}}
+    </div>
+    <div class="row">
+      <div class=" justify-content-md-center">
+          <div class="col-4">
+              <img src="../../assets/images/journey.webp">
+            </div>
+            <div class="col-8">
+              <div id="carouselSuccessStories" class="carousel slide carousel-custom justify-content-md-center" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li *ngFor="let story of successStories; let i = index" data-target="#carouselSuccessStories" [attr.data-slide-to]="i" ngClass="i == 0 ? 'active' : ''">
                   </li>
-                </ul>
-              </div>
-              <div>
-                {{successStories[i].feedback}}
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                  <div *ngFor="let story of successStories; let i = index" [ngClass]="i == 0 ? 'carousel-item active' : 'carousel-item'">
+      
+                    <img src={{successStories[i].imageURL}} alt="Event Image">
+                    <div>
+                      <h4>
+                        {{successStories[i].name}}
+                      </h4>
+                    </div>
+      
+                    <div>
+                      <ul>
+                        <li *ngFor="let admit of successStories[i].admits; let j = index">
+                          {{successStories[i].admits[j]}}
+                        </li>
+                      </ul>
+                    </div>
+                    <div>
+                      {{successStories[i].feedback}}
+                    </div>
+                  </div>
+                </div>
+      
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
             </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
       </div>
+      
       <!-- <div class="col">
       1 of 3
     </div> -->
