* Fixed margins. and footer * Home page looking almost ready

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse bg-primary fixed-bottom">
+<nav class="navbar navbar-inverse bg-primary fixed-bottom" id="footer">
   <div class="container">
     <a class="navbar-brand" href="#">E-mail us: review.edupitr@gmail.com
       <span class="sr-only">(current)</span>
