--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-body">
   <div class="container-fluid">
     <div class="row">
-      <div id="carouselExampleControls" class="carousel slide carousel-customjustify-content-md-center" data-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide justify-content-md-center" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -47,7 +47,7 @@
       <div class="col">
 
       </div>
-      <div class="col-6">
+      <div class="col-8">
         <div>
           ALUMNI OF THESE UNIVERSITIES CAN WORK ON YOUR APPLICATION
         </div>
@@ -80,11 +80,11 @@
       </div>
     </div>
     <div class="row">
-      <div class=" justify-content-md-center">
-          <div class="col-4">
+      <div class="row justify-content-md-center">
+          <div class="col-5">
               <img src="../../assets/images/journey.webp">
             </div>
-            <div class="col-8">
+            <div class="col-7">
               <div id="carouselSuccessStories" class="carousel slide carousel-custom justify-content-md-center" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li *ngFor="let story of successStories; let i = index" data-target="#carouselSuccessStories" [attr.data-slide-to]="i" ngClass="i == 0 ? 'active' : ''">
@@ -107,9 +107,9 @@
                         </li>
                       </ul>
                     </div>
-                    <div>
+                    <p>
                       {{successStories[i].feedback}}
-                    </div>
+                    </p>
                   </div>
                 </div>
       
