Fix aboutus, faqs and services layouts

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,5 +1,6 @@
 <div class="container-body">
   <div class="container-fluid">
+    <h3>Our story</h3>
     <div class="row">
       <div class="col-sm">
         <div>
