--- a/src/app/faqs/faqs.component.css
+++ b/src/app/faqs/faqs.component.css
@@ -1,3 +1,7 @@
-.container-body{
+.container-body {
+    position: absolute;
+    top: 10%;
+    left: 15%;
+    height: 125%;
     margin-bottom: 10%;
 }
