* Change color in footer and header(not a great fix) * Change nav icon toggler SVG(not fully understood) * Changed students' images in home page to rounded corners

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
                 <div class="carousel-inner" role="listbox">
                   <div *ngFor="let story of successStories; let i = index" [ngClass]="i == 0 ? 'carousel-item active' : 'carousel-item'">
       
-                    <img src={{successStories[i].imageURL}} alt="Event Image">
+                    <img class="rounded-circle" src={{successStories[i].imageURL}} alt="Event Image">
                     <div>
                       <h4>
                         {{successStories[i].name}}
