--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top">
+<nav id="header" class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top">
   <div class="container">
     <img src="../../assets/images/edupitr_logo.png" alt="Edupitr logo">
     <a class="navbar-brand" href="#">Edupitr</a>
