* Added rxjs-compat * Added alerts * Added endpoints in environment.ts files * Completed contact us component

--- a/src/app/contactus/contactus.component.css
+++ b/src/app/contactus/contactus.component.css
@@ -1,3 +1,11 @@
 .container-body{
     margin-bottom: 10%;
+    margin-top: 15%;
+    width: 75%;
+    left: 15%;
+    position: absolute;
+}
+
+.form-control{
+    width: 75%;
 }
